# jrj-invoicing

./: .gitignore  README.md
backend/invoicing/: Dockerfile  Dockerfile.v1  README.md  prestart.sh  pyproject.toml
backend/invoicing/alembic/: env.py
backend/invoicing/alembic/versions/: 14ca4f37991a_add_unique_constraint_for_order_model.py  1bc43b30c1ab_update_order_pk.py  378782cfb9b9_add_total_price_column_on_order_model.py  580f0da03613_initial_config.py  66647fbe6d21_add_audit.py  a5ffa3d49281_add_autogenerate_keys.py  c5c78dd9cc40_add_sw_active_column_to_material_model.py  c7dca0643555_remove_total_price_column_on_order_model.py  cb3953b9e6a3_add_invoice_model_relationships.py  d7970429d419_add_order_model.py  e512b9c64651_add_job_model_relationships.py  e90f7783453b_init_db.py  f0febe8404fb_add_material_model.py  f9526e416967_add_description_column_to_product_model.py
backend/invoicing/src/: initial_data.py  main.py  pre_start.py
backend/invoicing/src/jrj_invoicing/: initial_data.py  main.py
backend/invoicing/src/jrj_invoicing/api/: api.py  deps.py
backend/invoicing/src/jrj_invoicing/core/: config.py
backend/invoicing/src/jrj_invoicing/crud/: __init__.py  base.py  crud_product.py
backend/invoicing/src/jrj_invoicing/db/: base.py  init_db.py  session.py
backend/invoicing/src/jrj_invoicing/models/: product.py
backend/invoicing/src/jrj_invoicing/schemas/: __init__.py  invoice.py  job.py  material.py  order.py  product.py
backend/invoicing/src/jrj_invoicing/utils/: PDF.py  Reporting.py
backend/invoicing/tests/: test_jrj_invoicing.py  test_main.py
(+23 files in other folders)
