[tool.poetry]
name = "jrj-invoicing"
version = "0.1.0"
description = ""
authors = ["Humberto Ramírez <humberto.rjdh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
uvicorn = "^0.17.5"
fastapi = "^0.75.0"
loguru = "^0.6.0"
requests = "^2.27.1"
# db operations
SQLAlchemy = "^1.4.32"
# retries
tenacity = "^8.0.1"
# postgres dialect
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
